--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Nevcan Uludaş">
   <!-- Leaflet CSS -->
+  <link rel="stylesheet" href="./styles/bulma.min.css">
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
   <link rel="stylesheet" href="./styles/style.css">
 </head>
