Enhance layout with responsive navbar and footer

--- a/wreck.html
+++ b/wreck.html
@@ -9,6 +9,8 @@
   <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
+
+  <!-- Navbar -->
   <nav class="navbar has-background-info-dark" role="navigation" aria-label="main navigation">
     <div class="container is-fullhd">
       <div class="navbar-brand">
@@ -50,10 +52,11 @@
   </nav>
 
   <div class="container is-fullhd mt-5">
-    <div id="details" class="detail-box">Loading...</div>
+    <div id="details" class="box">Loading...</div>
 
   </div>
 
+  <!-- Footer -->
   <footer class="footer mt-5">
     <div class="content has-text-centered">
       <p>
