Fix, map initialization logic

--- a/index.html
+++ b/index.html
@@ -93,17 +93,10 @@
   </section>
 
   <!-- Footer -->
-  <footer class="footer mt-5">
+  <footer class="footer">
     <div class="content has-text-centered">
-      <p>
-        <strong>Bulma</strong> by <a href="https://jgthms.com">Jeremy Thomas</a>.
-        The source code is licensed
-        <a href="https://opensource.org/license/mit">MIT</a>. The
-        website content is licensed
-        <a href="https://creativecommons.org/licenses/by-nc-sa/4.0//"
-          >CC BY NC SA 4.0</a
-        >.
-      </p>
+      <p><strong>© 2025 World of Wrecks</strong>. Developed by <a href="http://nevcan.com" class="has-text-dark" target="_blank" rel="noopener noreferrer">Nevcan Uludaş</a>.</p>
+      <p>Built with <a href="https://bulma.io" class="has-text-dark" target="_blank">Bulma</a> and <a href="https://leafletjs.com" class="has-text-dark" target="_blank">Leaflet</a>. Licensed under the <a href="https://opensource.org/licenses/MIT" class="has-text-dark" target="_blank">MIT License</a>.</p>
     </div>
   </footer>
 
