--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <div class="container is-fullhd">
       <div class="navbar-brand">
         <a class="navbar-item has-text-white" href="index.html">
+          <img src="./images/logos/world-of-wrecks-logo-primary.png" alt="WoW" class="logo">
           <strong class="">World of Wrecks</strong>
         </a>
         
