Add, logo guidelines download link to footer

--- a/about.html
+++ b/about.html
@@ -95,6 +95,11 @@
   <!-- Footer -->
   <footer class="footer">
     <div class="content has-text-centered">
+      <div class="level">
+        <div class="level-item">
+          <a href="./assets/Księga znaku WORD OF WRECKS 2.pdf" class="button is-success is-small" target="_blank" rel="noopener noreferrer">Download Logo Guidelines</a>
+        </div>
+      </div>
       <p><strong>© 2025 World of Wrecks</strong>. Developed by <a href="http://nevcan.com" class="has-text-dark" target="_blank" rel="noopener noreferrer">Nevcan Uludaş</a>.</p>
       <p>Built with <a href="https://bulma.io" class="has-text-dark" target="_blank">Bulma</a> and <a href="https://leafletjs.com" class="has-text-dark" target="_blank">Leaflet</a>. Licensed under the <a href="https://opensource.org/licenses/MIT" class="has-text-dark" target="_blank">MIT License</a>.</p>
     </div>
